--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
   "homepage": "https://github.com/muneneevans/react-d3-client#readme",
   "dependencies": {
     "react": "^15.6.1",
+    "react-autobind": "^1.0.6",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
-    "seamless-immutable": "^7.1.2"
+    "seamless-immutable": "^7.1.2",
+    "topojson-client": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
