--- a/package.json
+++ b/package.json
@@ -24,16 +24,21 @@
   },
   "homepage": "https://github.com/muneneevans/react-d3-client#readme",
   "dependencies": {
+    "grommet": "^1.5.0",
     "react": "^15.6.1",
     "react-autobind": "^1.0.6",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.2",
-    "topojson-client": "^3.0.0"
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.71.0",
+    "topojson-client": "^3.0.0",
+    "victory": "^0.21.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
