--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grommet": "^1.5.0",
     "react": "^15.6.1",
     "react-autobind": "^1.0.6",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
