--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "homepage": "https://github.com/muneneevans/react-d3-client#readme",
   "dependencies": {
+    "d3-pie": "^1.1.0",
+    "d3-scale": "^1.0.6",
+    "d3-shape": "^1.2.0",
     "grommet": "^1.5.0",
     "react": "^15.6.1",
     "react-autobind": "^1.0.6",
