--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "d3-scale": "^1.0.6",
     "d3-shape": "^1.2.0",
     "grommet": "^1.5.0",
+    "history": "^4.7.2",
     "react": "^15.6.1",
     "react-autobind": "^1.0.6",
     "react-dimensions": "^1.3.0",
@@ -35,6 +36,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
