Add: react vis integration

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3-pie": "^1.1.0",
     "d3-scale": "^1.0.6",
     "d3-shape": "^1.2.0",
+    "d3-time-format": "^2.0.5",
     "grommet": "^1.5.0",
     "history": "^4.7.2",
     "react": "^15.6.1",
@@ -38,6 +39,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-toolbox": "^2.0.0-beta.12",
+    "react-vis": "^1.7.4",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.2",
