--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/muneneevans/react-d3-client#readme",
   "dependencies": {
+    "d3-array": "^1.2.0",
+    "d3-axis": "^1.0.8",
     "d3-pie": "^1.1.0",
     "d3-scale": "^1.0.6",
     "d3-shape": "^1.2.0",
