--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "history": "^4.7.2",
     "react": "^15.6.1",
     "react-autobind": "^1.0.6",
+    "react-d3-basic": "^1.6.11",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
