--- a/package.json
+++ b/package.json
@@ -7,13 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build",
     "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/  --inline --hot --history-api-fallback",
-    "build:prod": "webpack -p && cp src/index.html dist/index.html",
-    "clean-public": "npm run remove-public && mkdir public",
-    "remove-public": "node_modules/.bin/rimraf ./public",
-    "build:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-public lint build:html",
-    // "build": "babel-node tools/build.js",
-    "postbuild": "babel-node tools/publicServer.js"
+    "build:prod": "webpack -p && cp src/index.html dist/index.html"
   },
   "repository": {
     "type": "git",
