--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "d3-time-format": "^2.0.5",
     "grommet": "^1.5.0",
     "history": "^4.7.2",
+    "preact": "^8.2.5",
+    "preact-compat": "^3.17.0",
     "react": "^15.6.1",
     "react-autobind": "^1.0.6",
     "react-d3-basic": "^1.6.11",
@@ -61,5 +63,11 @@
     "babel-preset-stage-2": "^6.24.1",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "resolve": {
+    "alias": {
+      "react": "preact-compat",
+      "react-dom": "preact-compat"
+    }
   }
 }
