--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "d3-time-format": "^2.0.5",
     "grommet": "^1.5.0",
     "history": "^4.7.2",
+    "nivo": "^0.30.0",
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "react": "^15.6.1",
