--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "react": "^15.6.1",
-    "react-autobind": "^1.0.6",
-    "react-d3-basic": "^1.6.11",
+    "react-autobind": "^1.0.6",    
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
@@ -52,8 +51,7 @@
     "seamless-immutable": "^7.1.2",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.71.0",
-    "topojson-client": "^3.0.0",
-    "victory": "^0.21.1"
+    "topojson-client": "^3.0.0"    
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
