--- a/package.json
+++ b/package.json
@@ -30,28 +30,23 @@
     "d3-pie": "^1.1.0",
     "d3-scale": "^1.0.6",
     "d3-shape": "^1.2.0",
-    "d3-time-format": "^2.0.5",
-    "grommet": "^1.5.0",
+    "d3-time-format": "^2.0.5",    
     "history": "^4.7.2",
     "nivo": "^0.30.0",
-    "preact": "^8.2.5",
-    "preact-compat": "^3.17.0",
-    "react": "^15.6.1",
-    "react-autobind": "^1.0.6",    
+    "react": "^15.6.2",
     "react-dimensions": "^1.3.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-toolbox": "^2.0.0-beta.12",
     "react-vis": "^1.6.7",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.2",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.71.0",
-    "topojson-client": "^3.0.0"    
+    "topojson-client": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -71,13 +66,8 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "style-loader": "^0.18.2",
-    "webpack": "^2.5.1",
+    "webpack": "^3.4.1",
+    "webpack-bundle-analyzer": "^1.5.4",
     "webpack-dev-server": "^2.4.5"
-  },
-  "resolve": {
-    "alias": {
-      "react": "preact-compat",
-      "react-dom": "preact-compat"
-    }
   }
 }
