--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boa-client",
+  "name": "dsl-client",
   "version": "1.0.0",
   "description": "data visualization",
   "main": "index.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/muneneevans/react-d3-client.git"
+    "url": "git+https://github.com/muneneevans/dsl-client.git"
   },
   "keywords": [
     "d3",
@@ -24,13 +24,7 @@
   },
   "homepage": "https://github.com/muneneevans/react-d3-client#readme",
   "dependencies": {
-    "d3": "^4.10.1",
-    "d3-array": "^1.2.0",
-    "d3-axis": "^1.0.8",
-    "d3-pie": "^1.1.0",
-    "d3-scale": "^1.0.6",
-    "d3-shape": "^1.2.0",
-    "d3-time-format": "^2.0.5",    
+    "d3": "^4.10.1",    
     "history": "^4.7.2",
     "nivo": "^0.30.0",
     "react": "^15.6.2",
